# imgui-template

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile
core/executables/example/: example.cpp
core/src/app_utils/: implementation.cpp
examples/: example_1.cpp  example_app.cpp  example_app.hpp  window_utils.hpp
